Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69500

QComboBox doesn't display current item on dev branch.

    XMLWordPrintable

Details

    • macOS
    • 8d3b9841e1732337db67c79571567ac9294b3d7c (qt/qtbase/5.12)

    Description

      QComboBox doesn't display the current item on dev branch

      Please execute the attached project. I am attaching snapshots stating the issue.

      Attachments

        1. combobox-5.12-a.png
          combobox-5.12-a.png
          70 kB
        2. combobox-5.12-b.png
          combobox-5.12-b.png
          69 kB
        3. qtbug69500.zip
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            shmittal Shveta Mittal (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes